--- a/src/components/Weight/styles.scss
+++ b/src/components/Weight/styles.scss
@@ -35,7 +35,7 @@
     }
 }
 
-.product--selected:hover {
+.product--selected:not(.nohover):hover {
     .weight {
         background-color: $color-red-2;
     }
